# lavava2025-bot

./: .gitignore  main.py  pyproject.toml
api/: __init__.py  api_client.py
config/: logging_config.py
core/: bot.py
core/cogs/: admin.py  funny.py  registration.py
services/: player_service.py
settings/: logging_config.py
src/api/: api_client.py
src/config/: logging_config.py
src/core/: bot.py
src/core/cogs/: admin.py  funny.py  match.py  player.py  ranking.py  registration.py
src/core/ui/: embeds.py  views.py
src/core/ui/views/: __init__.py  confirm_participation_view.py  players_buttons_view.py  select_maps_view.py
src/error/: __init__.py  api_errors.py
src/models/: match_model.py  match_response_model.py  player_model.py
src/services/: __init__.py  map_service.py  match_service.py  player_service.py  ranking_service.py  team_service.py
utils/: __init__.py
